# Pixelle-MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_CN.md  docker-compose.yml  main.py  pyproject.toml
docs/: CLI.md  CLI_CN.md  FAQ.md  FAQ_CN.md
mcp-base/services/: file_service.py
mcp-client/: main.py
mcp-client/.chainlit/: config.toml
mcp-client/chat/: starters.py
mcp-client/public/: app.js
pixelle/: .dockerignore  cli.py  core.py  filter.py  logger.py  main.py  settings.py
pixelle/api/: upload_api.py
pixelle/cli/: main.py
pixelle/cli/commands/: manual.py  reconfig.py  start.py  status.py
pixelle/cli/interactive/: menu.py  wizard.py
pixelle/cli/setup/: comfyui.py  service.py
pixelle/cli/setup/providers/: manager.py
pixelle/cli/utils/: command_utils.py  display.py  server_utils.py
pixelle/comfyui/: base_executor.py  facade.py
pixelle/manager/: workflow_manager.py
pixelle/tools/: file_uploader_tool.py  i_crop.py  workflow_manager_tool.py
pixelle/upload/: file_service.py  local_storage.py
pixelle/utils/: dynamic_util.py  file_uploader.py  network_util.py  os_util.py
pixelle/web/: app.py
pixelle/web/chat/: chat_handler.py
pixelle/web/converters/: message_converter.py
pixelle/web/utils/: llm_util.py
workflows/: t2i_flux_krea.json
