[project]
name = "pixelle-mcp-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.9.0",
    "boto3>=1.38.34",
    "chainlit>=2.7.1.1",
    "fastapi>=0.116.1",
    "fastmcp>=2.7.1",
    "litellm>=1.76.0",
    "pillow>=11.2.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "websockets>=12.0",
]

[project.scripts]
pixelle = "pixelle.main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
