[project]
name = "pixelle-mcp-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.9.0",
    "boto3>=1.38.34",
    "chainlit>=2.7.1.1",
    "fastapi>=0.116.1",
    "fastmcp>=2.7.1",
    "litellm>=1.76.0",
    "pillow>=11.2.1",
    "psutil>=5.9.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.3",
    "websockets>=12.0",
    "typer>=0.12.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
pixelle = "pixelle.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
